refactor: Stream.collect(Collectors.toList()) -> Stream.toList() 로 변경(UnmodifiableList로 반환)